--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,12 @@
     <body id="page-top" class="index">
 
     {% include header.html %}
-
+    {% include contact.html %}
     {% include footer.html %}
-    {% include modals.html %} -->
+    
+    {% include modals.html %}
     {% include js.html %}
+    
 
     </body>
 </html>
