--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -12,23 +12,36 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>{{ post.title }}</h2>
+                            <h3>{{ post.description }}</h3>
                             <hr class="star-primary">
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-                            <p>{{ post.description }}</p>
+                            <p>{{ post.title }}</p>
+                            
                             <ul class="list-inline item-details">
-                                <li>Client:
+                                <!-- <li>Client:
                                     <strong><a href="http://startbootstrap.com">{{ post.client }}</a>
                                     </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">{{ post.project-date }}</a>
+                                </li> -->
+                                <li>Project Status:
+                                    <strong><a href="http://startbootstrap.com">{{ post.project-status }}</a>
                                     </strong>
                                 </li>
                                 <li>Service:
                                     <strong><a href="http://startbootstrap.com">{{ post.category }}</a>
                                     </strong>
                                 </li>
+                                <li>Project Type:
+                                    <strong><a href="http://startbootstrap.com">{{ post.project-type }}</a>
+                                    </strong>
+                                </li>
+                                <li>Location:
+                                    <strong><a href="http://startbootstrap.com">{{ post.location }}</a>
+                                    </strong>
+                                </li>
+                                <!-- <li>Project Cost:
+                                    <strong><a href="http://startbootstrap.com">{{ post.cost }}</a>
+                                    </strong>
+                                </li>                                                                     -->
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
