--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,9 @@
     <body id="page-top" class="index">
 
     {% include header.html %}
+    
+    {% include services.html %}
+    {% include portfolio_grid.html %}
     {% include contact.html %}
     {% include footer.html %}
     
