fix og image wrong spelling and update head.html

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta property="og:image" content="https://laqueza.github.io/img/og_image.png"/>
+    <meta property="og:image" content="https://laqueza.github.io/img/og_image_fin.png"/>
     <meta property="og:title" content="LaQueza Construction | Engineers Contructors Consultants Philippines" />
     <meta property="og:description" content="{{ site.description }}" />
     <meta property="og:site_name" content="LaQueza Construction" />    
